compiler/eight-tests/tests/snapshots/ui_tests__compiler_ui_tests@syntax__loop__break_outside_loop.test.snap
---
source: compiler/eight-tests/tests/ui_tests.rs
info:
  program: hcc
  args:
    - tests/ui/syntax/loop/break_outside_loop.test
input_file: compiler/eight-tests/tests/ui/syntax/loop/break_outside_loop.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::break_outside_loop

  × break statement outside of loop
   ╭─[tests/ui/syntax/loop/break_outside_loop.test:2:3]
 1 │ fn test() {
 2 │   break;
   ·   ───┬──
   ·      ╰── there is no enclosing loop
 3 │ }
   ╰────
